--- a/app/src/main/res/drawable/logo_akademia_nauk.xml
+++ b/app/src/main/res/drawable/logo_akademia_nauk.xml
@@ -3,117 +3,103 @@
     android:height="98dp"
     android:viewportWidth="307"
     android:viewportHeight="98">
-  <path
-      android:pathData="M12.86,21.18l-9.69,8.95l22.58,0l0,-8.95z"
-      android:fillColor="#F7B813"/>
-  <path
-      android:pathData="M35.42,21.17l-9.67,8.97l0,32.16l11.83,0l0.07,-32.15l10.68,0l9.71,-8.98z"
-      android:fillColor="#0043FF"/>
-  <path
-      android:pathData="M76.75,32.94h-6.2l-2.24,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L76.75,32.94zM75.74,30.6l-1.97,-4.49l-2.11,4.49H75.74z"
-      android:fillColor="#0043FF"/>
-  <path
-      android:pathData="M97.22,37.72l-5.84,-7.12l-2.36,2.39l0,4.73l-3.43,0l0,-16.63l3.43,0l0,8.13l7.89,-8.13l3.76,0l-7.07,7.22l7.72,9.41z"
-      android:fillColor="#0043FF"/>
-  <path
-      android:pathData="M113.36,32.94h-6.2l-2.24,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L113.36,32.94zM112.35,30.6l-1.97,-4.49l-2.11,4.49H112.35z"
-      android:fillColor="#0043FF"/>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
     <path
-        android:pathData="M139.02,29.11c0,3.69 -2.11,8.7 -11.65,8.7c-1.13,0 -3.26,-0.05 -5.17,-0.23v-16.11c1.57,-0.21 3.85,-0.39 5.61,-0.39C136.29,21.09 139.02,25.09 139.02,29.11M135.34,29.3c0,-2.94 -1.74,-5.77 -7.27,-5.77c-0.79,0 -1.74,0.05 -2.44,0.13v11.67c0.7,0.08 1.63,0.13 2.3,0.13C133.63,35.46 135.34,32.21 135.34,29.3"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
+        android:pathData="M12.86,21.18l-9.69,8.95l22.58,0l0,-8.95z"
+        android:fillColor="#F7B813" />
     <path
-        android:pathData="M154.46,35.27l-0.42,2.44l-11.17,0l0,-16.4l11.06,0l-0.45,2.47l-7.19,0l0,4.23l6.43,0l-0.45,2.34l-5.98,0l0,4.91z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
+        android:pathData="M35.42,21.17l-9.67,8.97l0,32.16l11.83,0l0.07,-32.15l10.68,0l9.71,-8.98z"
+        android:fillColor="#0043FF" />
     <path
-        android:pathData="M177.31,21.35l0,16.37l-3.42,0l0,-10.03l-5.78,8.06l-1.52,0l-5.84,-7.95l0,9.93l-3,0l0,-16.37l2.33,0l7.66,10.45l7.41,-10.45z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
+        android:pathData="M76.75,32.94h-6.2l-2.24,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L76.75,32.94zM75.74,30.6l-1.97,-4.49l-2.11,4.49H75.74z"
+        android:fillColor="#0043FF" />
     <path
-        android:pathData="M182.11,21.35h3.42v16.37h-3.42z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
+        android:pathData="M97.22,37.72l-5.84,-7.12l-2.36,2.39l0,4.73l-3.43,0l0,-16.63l3.43,0l0,8.13l7.89,-8.13l3.76,0l-7.07,7.22l7.72,9.41z"
+        android:fillColor="#0043FF" />
     <path
-        android:pathData="M200.3,32.94h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.22,16.37h-3.82L200.3,32.94zM199.29,30.6l-1.97,-4.49l-2.1,4.49H199.29z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M80.4,48.26l-5.78,0l0,13.93l-3.43,0l0,-13.93l-5.95,0l0,-2.44l15.61,0z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M91.07,57.41h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L91.07,57.41zM90.06,55.07l-1.97,-4.5l-2.11,4.5H90.06z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M115.24,62.19h-4.07l-3.79,-4.57c-1.74,-2.05 -2.67,-2.21 -4.04,-2.21v6.78h-3.42v-16.24c1.57,-0.21 3.87,-0.39 5.3,-0.39c4.88,0 7.19,1.95 7.19,4.52c0,2.13 -1.54,3.66 -4.21,4.42c0.79,0.36 1.52,0.99 2.33,1.97L115.24,62.19zM103.34,53.23c3.68,0.16 5.45,-0.88 5.45,-2.73c0,-1.3 -0.84,-2.55 -3.62,-2.55c-0.48,0 -1.21,0.05 -1.82,0.13V53.23z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M134.16,45.82l0,16.47l-1.77,0l-11.65,-10.97l0,10.86l-3,0l0,-16.37l1.77,0l11.65,10.97l0,-10.97z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M156.93,53.96c0,5.02 -4.43,8.5 -9.49,8.5c-4.91,0 -9.4,-3.3 -9.4,-8.39c0,-5.01 4.41,-8.5 9.46,-8.5C152.41,45.56 156.93,48.86 156.93,53.96M153.25,54.06c0,-3.98 -2.84,-6.05 -5.89,-6.05c-3.23,0 -5.67,2.34 -5.67,5.95c0,3.98 2.83,6.05 5.89,6.05C150.81,60.01 153.25,57.7 153.25,54.06"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M183.4,45.82l-5.75,16.5l-2.44,0l-4.07,-10.45l-4.04,10.45l-2.47,0l-6.23,-16.5l3.7,0l4.18,11.3l3.43,-8.89l-0.84,-2.16l3.51,0l4.18,11.04l3.65,-11.3z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M185.37,60.74l-0.36,-3.38c1.82,1.56 3.9,2.52 5.75,2.52c1.85,0 2.84,-0.83 2.84,-2c0,-3.17 -7.83,-2.36 -7.83,-7.48c0,-2.75 2.33,-4.83 6.37,-4.83c1.97,0 3.48,0.49 4.41,1.04v2.99c-1.21,-0.88 -2.75,-1.59 -4.46,-1.59c-1.77,0 -2.75,0.78 -2.75,1.92c0,3.07 7.92,2.16 7.92,7.48c0,3.07 -2.58,5.04 -6.37,5.04C188.9,62.45 186.97,61.88 185.37,60.74"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M212.71,62.19l-5.84,-7.12l-2.36,2.39l0,4.73l-3.42,0l0,-16.63l3.42,0l0,8.13l7.89,-8.13l3.76,0l-7.07,7.22l7.72,9.41z"
-        android:fillColor="#0043FF"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M-62,-62.67h361v236.28h-361z"/>
-    <path
-        android:pathData="M228.85,57.41h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L228.85,57.41zM227.84,55.07l-1.97,-4.5l-2.11,4.5H227.84z"
-        android:fillColor="#0043FF"/>
-  </group>
+        android:pathData="M113.36,32.94h-6.2l-2.24,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L113.36,32.94zM112.35,30.6l-1.97,-4.49l-2.11,4.49H112.35z"
+        android:fillColor="#0043FF" />
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M139.02,29.11c0,3.69 -2.11,8.7 -11.65,8.7c-1.13,0 -3.26,-0.05 -5.17,-0.23v-16.11c1.57,-0.21 3.85,-0.39 5.61,-0.39C136.29,21.09 139.02,25.09 139.02,29.11M135.34,29.3c0,-2.94 -1.74,-5.77 -7.27,-5.77c-0.79,0 -1.74,0.05 -2.44,0.13v11.67c0.7,0.08 1.63,0.13 2.3,0.13C133.63,35.46 135.34,32.21 135.34,29.3"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M154.46,35.27l-0.42,2.44l-11.17,0l0,-16.4l11.06,0l-0.45,2.47l-7.19,0l0,4.23l6.43,0l-0.45,2.34l-5.98,0l0,4.91z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M177.31,21.35l0,16.37l-3.42,0l0,-10.03l-5.78,8.06l-1.52,0l-5.84,-7.95l0,9.93l-3,0l0,-16.37l2.33,0l7.66,10.45l7.41,-10.45z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M182.11,21.35h3.42v16.37h-3.42z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M200.3,32.94h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.22,16.37h-3.82L200.3,32.94zM199.29,30.6l-1.97,-4.49l-2.1,4.49H199.29z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M80.4,48.26l-5.78,0l0,13.93l-3.43,0l0,-13.93l-5.95,0l0,-2.44l15.61,0z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M91.07,57.41h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L91.07,57.41zM90.06,55.07l-1.97,-4.5l-2.11,4.5H90.06z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M115.24,62.19h-4.07l-3.79,-4.57c-1.74,-2.05 -2.67,-2.21 -4.04,-2.21v6.78h-3.42v-16.24c1.57,-0.21 3.87,-0.39 5.3,-0.39c4.88,0 7.19,1.95 7.19,4.52c0,2.13 -1.54,3.66 -4.21,4.42c0.79,0.36 1.52,0.99 2.33,1.97L115.24,62.19zM103.34,53.23c3.68,0.16 5.45,-0.88 5.45,-2.73c0,-1.3 -0.84,-2.55 -3.62,-2.55c-0.48,0 -1.21,0.05 -1.82,0.13V53.23z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M134.16,45.82l0,16.47l-1.77,0l-11.65,-10.97l0,10.86l-3,0l0,-16.37l1.77,0l11.65,10.97l0,-10.97z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M156.93,53.96c0,5.02 -4.43,8.5 -9.49,8.5c-4.91,0 -9.4,-3.3 -9.4,-8.39c0,-5.01 4.41,-8.5 9.46,-8.5C152.41,45.56 156.93,48.86 156.93,53.96M153.25,54.06c0,-3.98 -2.84,-6.05 -5.89,-6.05c-3.23,0 -5.67,2.34 -5.67,5.95c0,3.98 2.83,6.05 5.89,6.05C150.81,60.01 153.25,57.7 153.25,54.06"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M183.4,45.82l-5.75,16.5l-2.44,0l-4.07,-10.45l-4.04,10.45l-2.47,0l-6.23,-16.5l3.7,0l4.18,11.3l3.43,-8.89l-0.84,-2.16l3.51,0l4.18,11.04l3.65,-11.3z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M185.37,60.74l-0.36,-3.38c1.82,1.56 3.9,2.52 5.75,2.52c1.85,0 2.84,-0.83 2.84,-2c0,-3.17 -7.83,-2.36 -7.83,-7.48c0,-2.75 2.33,-4.83 6.37,-4.83c1.97,0 3.48,0.49 4.41,1.04v2.99c-1.21,-0.88 -2.75,-1.59 -4.46,-1.59c-1.77,0 -2.75,0.78 -2.75,1.92c0,3.07 7.92,2.16 7.92,7.48c0,3.07 -2.58,5.04 -6.37,5.04C188.9,62.45 186.97,61.88 185.37,60.74"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M212.71,62.19l-5.84,-7.12l-2.36,2.39l0,4.73l-3.42,0l0,-16.63l3.42,0l0,8.13l7.89,-8.13l3.76,0l-7.07,7.22l7.72,9.41z"
+            android:fillColor="#0043FF" />
+    </group>
+    <group>
+        <clip-path android:pathData="M-62,-62.67h361v236.28h-361z" />
+        <path
+            android:pathData="M228.85,57.41h-6.2l-2.25,4.78h-3.2l7.86,-16.37h2.5l7.21,16.37h-3.82L228.85,57.41zM227.84,55.07l-1.97,-4.5l-2.11,4.5H227.84z"
+            android:fillColor="#0043FF" />
+    </group>
 </vector>
