--- a/app/src/main/res/layout/activity_edit_profil.xml
+++ b/app/src/main/res/layout/activity_edit_profil.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -30,8 +29,7 @@
                 android:text="Edit Profile"
                 android:textSize="36sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-               />
+                android:textStyle="bold" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -42,8 +40,7 @@
                 android:padding="8dp"
                 android:hint="Name"
                 android:drawableLeft="@drawable/baseline_account_circle_24"
-                android:drawablePadding="8dp"
-                />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -57,8 +54,8 @@
                 android:drawablePadding="8dp"
 
 
-
                 />
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -68,8 +65,7 @@
                 android:padding="8dp"
                 android:hint="Username"
                 android:drawableLeft="@drawable/baseline_account_circle_24"
-                android:drawablePadding="8dp"
-                />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -82,7 +78,7 @@
                 android:inputType="textPassword"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <Button
                 android:layout_width="match_parent"
@@ -93,7 +89,7 @@
                 android:layout_marginTop="30dp"
                 style="@style/DarkModeButtonStyle"
                 android:background="@drawable/button_background"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,8 +99,7 @@
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
 
         </LinearLayout>
