--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,8 +30,7 @@
                 android:text="Login"
                 android:textSize="36sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-             />
+                android:textStyle="bold" />
 
 
             <EditText
@@ -44,8 +42,7 @@
                 android:padding="8dp"
                 android:hint="Username"
                 android:drawableLeft="@drawable/baseline_account_circle_24"
-                android:drawablePadding="8dp"
-             />
+                android:drawablePadding="8dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -57,8 +54,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:drawableLeft="@drawable/baseline_lock_24"
-                android:drawablePadding="8dp"
-               />
+                android:drawablePadding="8dp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -69,7 +65,7 @@
                 android:id="@+id/login_button"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius="20dp" />
 
             <TextView
                 android:id="@+id/signupRedirectText"
@@ -96,8 +92,6 @@
 
 
                 />
-
-
 
 
         </LinearLayout>
