--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -4,22 +4,21 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
 
-    android:background="@drawable/text_borderhome"
->
+    android:background="@drawable/text_borderhome">
 
-<TextView
+    <TextView
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/roomTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 </FrameLayout>
